# rascaline

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.rst  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.rst  REQUIREMENTS.md  _redirect.html  build.rs  index.html  mp.py  pyproject.toml  ruff.toml  setup.cfg  setup.py  tmp.py  tox.ini
docs/featomic-json-schema/: Cargo.toml  main.rs
docs/rascaline-json-schema/: Cargo.toml  main.rs
featomic/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs
featomic-c-api/: CMakeLists.txt  Cargo.toml  build.rs
featomic-c-api/cmake/: featomic-config.in.cmake
featomic-c-api/examples/: compute-soap.c  compute-soap.cpp  profiling.c  profiling.cpp
featomic-c-api/examples/common/: systems.c
featomic-c-api/include/: featomic.h  featomic.hpp
featomic-c-api/src/: calculator.rs  lib.rs  logging.rs  profiling.rs  status.rs  system.rs  utils.rs
featomic-c-api/tests/: CMakeLists.txt  check-cxx-install.rs  helpers.hpp  run-cxx-tests.rs  systems.cpp
featomic-c-api/tests/cxx/: CMakeLists.txt  systems.cpp
featomic-c-api/tests/utils/: mod.rs
featomic-torch/: CHANGELOG.md  CMakeLists.txt  Cargo.toml
featomic-torch/cmake/: dev-versions.cmake  featomic_torch-config.in.cmake
featomic-torch/include/featomic/: torch.hpp
featomic-torch/src/: autograd.cpp  calculator.cpp  openmp.cpp  openmp.hpp  register.cpp  system.cpp
featomic-torch/tests/: CMakeLists.txt  calculator.cpp  check-torch-install.rs  run-torch-tests.rs
featomic-torch/tests/cmake-project/: CMakeLists.txt  README.md
featomic-torch/tests/utils/: mod.rs
featomic/benches/: lode-spherical-expansion.rs  soap-power-spectrum.rs  soap-spherical-expansion.rs  spherical-harmonics.rs
featomic/benches/data/: molecular_crystals.xyz
featomic/cmake/: dev-versions.cmake  featomic-config.in.cmake
featomic/examples/: compute-soap.rs  profiling.c  profiling.cpp  profiling.rs
featomic/examples/common/: systems.h
featomic/examples/data/: water.xyz
featomic/include/: featomic.h
featomic/src/: calculator.rs  errors.rs  lib.rs
featomic/src/c_api/: calculator.rs  logging.rs  mod.rs  profiling.rs  status.rs  system.rs
featomic/src/calculators/: atomic_composition.rs  dummy_calculator.rs  sorted_distances.rs  tests_utils.rs
featomic/src/labels/: mod.rs
featomic/src/math/: eigen.rs  erf.rs  exp.rs  gamma.rs  hyp1f1.rs  k_vectors.rs  mod.rs  spherical_harmonics.rs
featomic/src/systems/: cell.rs  chemfiles.rs  mod.rs  neighbors.rs  simple_system.rs
featomic/src/tutorials/: mod.rs
featomic/src/types/: matrix.rs  mod.rs  vectors.rs
featomic/tests/: CMakeLists.txt  file-size-limit.rs  lode-madelung.rs  lode-spherical-expansion.rs  lode-vs-soap.rs  soap-power-spectrum.rs  soap-spherical-expansion.rs  spherical-harmonics.rs
featomic/tests/c/: CMakeLists.txt  calculator.cpp  logging.cpp  systems.cpp
featomic/tests/cmake-project/: CMakeLists.txt  README.md
featomic/tests/cxx/: CMakeLists.txt  calculator.cpp  systems.cpp  test_system.hpp
featomic/tests/data/: .gitignore  README.md  lode-spherical-expansion.py  mod.rs  save_data.py  soap-power-spectrum.py  soap-spherical-expansion.py
featomic/tests/utils/: helpers.cpp
python/featomic_torch/: MANIFEST.in  pyproject.toml  setup.py
python/featomic_torch/build-backend/: backend.py
python/featomic_torch/tests/: calculator.py  system.py  utils.py
python/rascaline-torch/: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py
python/rascaline-torch/build-backend/: backend.py
python/rascaline-torch/tests/: autograd.py  calculator.py  export.py  system.py
rascaline/: Cargo.toml
rascaline-c-api/: CMakeLists.txt  Cargo.toml  build.rs  rascaline.h
rascaline-c-api/cmake/: rascaline-config.in.cmake
rascaline-c-api/examples/: compute-soap.c  compute-soap.cpp  profiling.c  profiling.cpp
rascaline-c-api/include/: equistore.hpp  rascaline.h  rascaline.hpp
rascaline-c-api/src/: calculator.rs  descriptor.rs  lib.rs  logging.rs  profiling.rs  status.rs  system.rs  utils.rs
rascaline-c-api/tests/: CMakeLists.txt  c-api-install.rs  c-api-tests.rs  c-api.rs  calculator.cpp  check-cxx-install.rs  helpers.cpp  helpers.hpp  logging.cpp  python-api.rs  run-cxx-tests.rs  systems.cpp
rascaline-c-api/tests/c-api/: CMakeLists.txt  calculator.cpp  descriptor.cpp  helpers.cpp  helpers.hpp  logging.cpp  systems.cpp  valgrind.supp
rascaline-c-api/tests/catch/: CMakeLists.txt
rascaline-c-api/tests/cmake-project/: CMakeLists.txt  README.md
rascaline-c-api/tests/cxx/: CMakeLists.txt  calculator.cpp  systems.cpp  test_system.hpp
rascaline-c-api/tests/utils/: mod.rs
rascaline-torch/: CMakeLists.txt  Cargo.toml
rascaline-torch/cmake/: rascaline_torch-config.in.cmake
rascaline-torch/include/rascaline/: torch.hpp
rascaline-torch/src/: autograd.cpp  calculator.cpp  openmp.cpp  openmp.hpp  register.cpp  system.cpp
rascaline-torch/tests/: CMakeLists.txt  calculator.cpp  check-torch-install.rs  run-torch-tests.rs  system.cpp  valgrind.supp
rascaline-torch/tests/cmake-project/: CMakeLists.txt  README.md
rascaline-torch/tests/utils/: mod.rs
rascaline/benches/: lode-spherical-expansion.rs  soap-power-spectrum.rs  soap-radial-integral.rs  soap-spherical-expansion.rs  spherical-expansion.rs  spherical-harmonics.rs
rascaline/benches/data/: silicon_bulk.xyz  xyz_to_json.py
rascaline/examples/: compute-soap.rs  profiling.rs
rascaline/src/: calculator.rs  errors.rs  lib.rs  math.rs
rascaline/src/calculators/: atomic_composition.rs  composition.rs  descriptors_by_systems.rs  dummy_calculator.rs  mod.rs  neighbor_list.rs  sorted_distances.rs  tests_utils.rs
rascaline/src/descriptor/: descriptor.rs  mod.rs
rascaline/src/labels/: keys.rs  mod.rs
rascaline/tests/: file-size-limit.rs  hypergeometric.rs  lode-madelung.rs  lode-spherical-expansion.rs  lode-vs-soap.rs  soap-power-spectrum.rs  soap-spherical-expansion.rs  spherical-expansion.rs  spherical-harmonics.rs
tests/c_api/: CMakeLists.txt  calculator.cpp  descriptor.cpp  helpers.cpp  helpers.hpp
(+2085 files in other folders)
