[package]
name = "rascaline"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "*"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
num-traits = "*"

[dev-dependencies]
approx = "*"

[build-dependencies]
cbindgen = "*"
