[build-system]
requires = [
    "setuptools >=44",
    "wheel >=0.36",
    "cmake",
]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = """
    /python/rascaline/_c_api\\.py
"""

[tool.isort]
profile = "black"
line_length = 88
indent = 4
known_local_folder = [
    "html_hidden",
    "myst_parser",
    "save_data",
    "test_systems",
]
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "rascaline"

[tool.check-manifest]
# we want to include Cargo.lock in the sdist to ensure the same version of
# depencencies will be picked when building wheels from source
ignore = ["Cargo.lock"]

### ======================================================================== ###

[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["python/tests"]
