[project]
name = "rascaline"
dynamic = ["version", "authors", "optional-dependencies"]
requires-python = ">=3.9"

readme = "README.rst"
license = {text = "BSD-3-Clause"}
description = "Computing representations for atomistic machine learning"

keywords = ["computational science", "machine learning", "molecular modeling", "atomistic representations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "metatensor-core >=0.1.0,<0.2.0",
    "metatensor-operations >=0.3.0,<0.4.0",
    "wigners",
]

[project.urls]
homepage = "https://luthaf.fr/rascaline/latest/"
documentation = "https://luthaf.fr/rascaline/latest/"
repository = "https://github.com/Luthaf/rascaline"
# changelog = "TODO"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=61",
    "wheel >=0.38",
    "cmake",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["python/rascaline"]
include = ["rascaline*"]
namespaces = false

### ======================================================================== ###


[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B018", "B904"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["rascaline"]
known-third-party = ["torch"]

[tool.ruff.format]
docstring-code-format = true

### ======================================================================== ###

[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["python/rascaline/tests"]
