[metadata]
name = rascaline
version = attr: rascaline.__version__
long_description = file: README.md
long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    = python
install_requires = numpy

[options.packages.find]
where = python

[bdist_wheel]
universal = 1
