[metadata]
name = rascaline
long_description = file: README.md
long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    = python
install_requires = numpy

[options.packages.find]
where = python

[bdist_wheel]
universal = 1

[flake8]
max_line_length = 88
ignore =
    D100  # Missing docstring in public module
    D101  # Missing docstring in public class
    D102  # Missing docstring in public method
    D104  # Missing docstring in public package
    D105  # Missing docstring in public method
    D107  # Missing docstring in __init__
    D402  # First line should not be the function's "signature"
