[metadata]
name = rascaline
url = https://github.com/Luthaf/rascaline
description = Computing representations for atomistic machine learning
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = computational science, machine learning, atomistic representations
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C
    Programming Language :: Rust
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
package_dir =
    = python
install_requires =
    numpy
    equistore-core @ https://github.com/lab-cosmo/equistore/archive/789f1228d26610c315803b1df28e5562241980aa.zip#subdirectory=python/equistore-core

[options.packages.find]
where = python

[bdist_wheel]
universal = 1

[flake8]
max_line_length = 88
