[package]
name = "featomic-c-api"
version = "0.1.0"
authors = ["Guillaume Fraux <guillaume.fraux@epfl.ch>"]
edition = "2021"
rust-version = "1.74"
publish = false

[lib]
# when https://github.com/rust-lang/cargo/pull/8789 lands, use it here!
# until then, build all the crate-type we need
name = "featomic"
crate-type = ["cdylib", "staticlib"]
bench = false

[dependencies]
featomic = {path = "../featomic", version = "0.1.0", default-features = false}
metatensor = "0.2"

ndarray = "0.16"
log = { version = "0.4", features = ["std"] }
once_cell = "1"
time-graph = {version = "0.3.0", features = ["table", "json"]}
libc = "0.2"

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }
fs_extra = "1"
metatensor = "0.2"

[dev-dependencies]
which = "5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
